# qTrader

./: CMakeLists.txt  README.md
include/: API.h  Auth.h  Websock.h
src/: API.cpp  Auth.cpp  Insta.cpp  Websock.cpp  main.cpp
